test/scc/pp/errors/036.a
036.t:1:8: error: macro names must be identifiers